--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">FitnessX</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client_id1">427231220541-oo5llb5f4pu11jib2qekofcf3h5dmvck.apps.googleusercontent.com</string>
+    <string-array name="gender">
+        <item>
+            Choose gender
+        </item><item>
+            male
+        </item>
+        <item>
+            female
+        </item>
+    </string-array>
 </resources>
