--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string-array name="gender">
         <item>
             Choose gender
-        </item><item>
+        </item>
+        <item>
             male
         </item>
         <item>
